Small additional to index.htmll

--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Welcome Coursera!</title>
+	<title>Welcome to SAB Coursera Page!</title>
 </head>
 <body>
-<h1>Hello Coursera!</h1>
+<h1>Greetings! Navigate to Assignments!</h1>
 </body>
 </html>
